package com.ranni.connector.http.response;

/**
 * Title: HttpServer
 * Description:
 *
 * @Author 2Executioner
 * @Email 1205878539@qq.com
 * @Date 2022-03-22 18:28
 */
public class HttpResponseImpl extends HttpResponseBase {
}
