@startuml

title v0.0.2 response UML图
interface Response
interface javax.servlet.ServletResponse
interface javax.servlet.http.HttpServletResponse
interface HttpResponse
abstract class javax.servlet.ServletOutputStream
class java.io.PrintWriter
class ResponseBase
class HttpResponseBase
class HttpResponseImpl
class ResponseFacade
class HttpResponseFacade
class ResponseWriter
class ResponseStream

Response <|-- HttpResponse
javax.servlet.ServletResponse <|-- javax.servlet.http.HttpServletResponse
ResponseBase <|-- HttpResponseBase
ResponseFacade <|-- HttpResponseFacade
HttpResponseBase <|-- HttpResponseImpl
java.io.PrintWriter <|-- ResponseWriter
Response <|.. ResponseBase
HttpResponse <|.. HttpResponseBase
javax.servlet.ServletResponse <|.. ResponseBase
javax.servlet.http.HttpServletResponse <|.. HttpResponseBase
javax.servlet.ServletResponse <|.. ResponseFacade
javax.servlet.http.HttpServletResponse <|.. HttpResponseFacade
javax.servlet.ServletOutputStream <|.. ResponseStream
ResponseBase "1" *-- ResponseStream
ResponseWriter <.. ResponseBase

@enduml